[package]
name = "khinchin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
primal = "0.3.0"
rayon = "1.5.3"
rug = "1.17.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
debug = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
